--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@popperjs/core": "^2.9.2",
     "date-fns": "^2.22.1",
     "framer-motion": "^4.1.17",
     "next": "10.2.3",
